--- a/resources/assets/sass/helpers/_config.scss
+++ b/resources/assets/sass/helpers/_config.scss
@@ -31,6 +31,7 @@ $svg-fill-color: $ft-color;
 
 // Buttons
 $button-background-color: $md-clr-red-400;
+//$button-background-color: #2185D0; // Alt blue
 $button-ft-color: $md-clr-grey-50;
 $button-height: 36px;
 $button-small-height: 1.9em;
